--- a/index.html
+++ b/index.html
@@ -7604,7 +7604,7 @@
                       </li>
                       <li>
                         <p><strong>transform    </strong>
-                         –  A function/transform that takes in the coarsened and pooled <mark>torch_geometric.data.Data</mark> object and returns a transformed version.
+                         –  A function/transform that takes in the coarsened and pooled <mark>Data</mark> object and returns a transformed version.
                       </p>
                       </li>
                     </ul>
@@ -7727,7 +7727,7 @@
                       </li>
                       <li>
                         <p><strong>transform    </strong>
-                         –  A function/transform that takes in the coarsened and pooled <mark>torch_geometric.data.Data</mark> object and returns a transformed version.
+                         –  A function/transform that takes in the coarsened and pooled <mark>Data</mark> object and returns a transformed version.
                       </p>
                       </li>
                     </ul>
