--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 
                 <ul class="list-unstyled"> 
                   <li><strong>Version:</strong> 1.0</li>
-                  <li><strong>Author:</strong> <a href="http://www.harnishdesign.net" target="_blank">Binary Brains
+                  <li><strong>Author:</strong> <a href="#" target="_blank">Binary Brains
                       Team</a></li>
                  
                 </ul>
