--- a/index.html
+++ b/index.html
@@ -8799,7 +8799,7 @@
               data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
         </ul>
         <p class="text-2 text-center mb-0">Design &amp; Develop by <a class="btn-link" target="_blank"
-            href="http://www.harnishdesign.net/">Binary Brains Team</a>.</p>
+            href="#">Binary Brains Team</a>.</p>
       </div>
     </footer>
     <!-- Footer end -->
