--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             
           </div>
           <ul class="social-icons social-icons-sm ml-lg-2 mr-2">
-            <li><a data-toggle="tooltip" href="http://www.github.com/" target="_blank" title=""
+            <li><a data-toggle="tooltip" href="https://github.com/Ritaj19Zamel/Layers" target="_blank" title=""
               data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
           </ul>
         </div>
@@ -111,7 +111,7 @@
               <div class="header_overlay">
                 <div id="particles-js">
                   <h1>Graph Brain</h1>
-                  <a href="https://github.com/" target="_blank">GitHub</a>
+                  <a href="https://github.com/Ritaj19Zamel/Layers" target="_blank">GitHub</a>
                   <!-- <p>Graph Brain is a library help in writing and training Graph Neural Networks (GNNs) for a wide range of applications related to structured data.</p> -->
                   <!-- <p class="lead">Thank you so much for purchasing our item from themeforest.</p> -->
                 </div>
@@ -8795,7 +8795,7 @@
       <div class="container">
         <ul class="social-icons social-icons-lg social-icons-muted justify-content-center mb-3">
           
-          <li><a data-toggle="tooltip" href="http://www.github.com/" target="_blank" title=""
+          <li><a data-toggle="tooltip" href="https://github.com/Ritaj19Zamel/Layers" target="_blank" title=""
               data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
         </ul>
         <p class="text-2 text-center mb-0">Design &amp; Develop by <a class="btn-link" target="_blank"
