--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="assets/images/artificial-intelligence.png" type="image/icon type">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
   <link href="assets/images/favicon.png" rel="icon" />
   <title>GB Documentation | graph_brain documentation</title>
   <meta name="description" content="Graph Neural Network Library">
   <meta name="author" content="harnishdesign.net">
+
 
   <!-- Stylesheet
 ============================== -->
